[package]
name = "notes"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.83"
axum = "0.8.1"
config = "0.15.4"
dotenvy = "0.15.7"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-rustls", "postgres"] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
